--- a/public/scss/kario_css.scss
+++ b/public/scss/kario_css.scss
@@ -44,6 +44,10 @@
 
 	//Character Tab Styles
 	@media (max-width: 749px){ 
+		#nameGender {
+			z-index: 1000;
+			height: 372px !important;
+		}
 		.mobile_hide { visibility: hidden; }
 		.mobile_display { display: none; }
 		.color_drop {
@@ -109,13 +113,13 @@
     					position: absolute;
     					top: 0px;
     					left: 90px;
-    					width: 480px;
+    					width: 400px;
     					height: 83px;
     					overflow: hidden;
     					float: left;
 							.icon-scroller-inner {
 								position: absolute;
-	    					width: 480px;
+	    					width: 400px;
 	    					overflow-x: scroll;
 	    					overflow-y: hidden;
 							}
@@ -130,6 +134,11 @@
 			}
 		}	
 		#slider {
+			position: relative;
+			top: -700px;
+			left: -100px;
+			transform: scale(.8);
+			z-index: 1000px;
 			margin-top: 130px !important; pointer-events: none;
 			img:first-child {
 	  		position: absolute !important;
